Unit_2_C_programming/C basics/Homework2/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
Info: Nothing to build for ex5
21:35:35 **** Incremental Build of configuration Debug for project ex5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ex5.o" "..\\src\\ex5.c" 
gcc -o ex5.exe "src\\ex5.o" 
Info: Nothing to build for ex5
Info: Nothing to build for ex5
Info: Nothing to build for ex5
21:37:25 **** Incremental Build of configuration Debug for project ex5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ex5.o" "..\\src\\ex5.c" 
..\src\ex5.c: In function 'main':
..\src\ex5.c:20:2: error: expected ')' before '{' token
  {
  ^
..\src\ex5.c:28:1: error: expected expression before '}' token
 }
 ^
21:37:42 **** Incremental Build of configuration Debug for project ex5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ex5.o" "..\\src\\ex5.c" 
..\src\ex5.c: In function 'main':
..\src\ex5.c:20:2: error: expected ')' before '{' token
  {
  ^
..\src\ex5.c:28:1: error: expected expression before '}' token
 }
 ^
21:38:08 **** Incremental Build of configuration Debug for project ex5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ex5.o" "..\\src\\ex5.c" 
gcc -o ex5.exe "src\\ex5.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file ex5.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
Info: Nothing to build for ex1
Info: Nothing to build for ex2
Info: Nothing to build for ex3
Info: Nothing to build for ex4
21:40:06 **** Incremental Build of configuration Debug for project ex5 ****
Info: Internal Builder is used for build
gcc -o ex5.exe "src\\ex5.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file ex5.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
Info: Nothing to build for ex6
Info: Nothing to build for ex7
Info: Nothing to build for ex8
21:40:12 **** Incremental Build of configuration Debug for project ex5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ex5.o" "..\\src\\ex5.c" 
gcc -o ex5.exe "src\\ex5.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file ex5.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
